  note that this is a Beta api and will likely be reworked to support multi-monitor multi-DPI.
- Renamed OpenPopupOnItemClick() to OpenPopupContextItem(). Kept inline redirection function (will obsolete).
- Removed CalcItemRectClosestPoint() entry point which was made obsolete and asserting in December 2017.

Other Changes:

- TabBar: Added ImGuiTabItemFlags_Button flag with which tab item returns true only on frame it was
  clicked on, making tab item behave like a button. [@rokups]
- TreeNode: Fixed bug where BeginDragDropSource() failed when the _OpenOnDoubleClick flag is
  enabled (bug introduced in 1.76, but pre-1.76 it would also fail unless the _OpenOnArrow
  flag was also set, and _OpenOnArrow is frequently set along with _OpenOnDoubleClick).
- TreeNode: Fixed bug where dragging a payload over a TreeNode() with either _OpenOnDoubleClick
  or _OpenOnArrow would open the node. (#143)
- Style: Added style.TabMinWidthForUnselectedCloseButton settings.
  Set to 0.0f (default) to always make a close button appear on hover (same as Chrome, VS).
  Set to FLT_MAX to only display a close button when selected (merely hovering is not enough).
  Set to an intermediary value to toggle behavior based on width (same as Firefox).
- Fix GetGlyphRangesKorean() end-range to end at 0xD7A3 (instead of 0xD79D). (#348, #3217) [@marukrap]
- Metrics: Added a "Settings" section with some details about persistent ini settings.
- Nav, Menus: Fix vertical wrap-around in menus or popups created with multiple appending calls to
  BeginMenu()/EndMenu() or BeginPopup/EndPopup(). (#3223, #1207) [@rokups]
- Drag and Drop: Fixed unintended fallback "..." tooltip display during drag operation when
  drag source uses _SourceNoPreviewTooltip flags. (#3160) [@rokups]
- Columns: Lower overhead on column switches and switching to background channel.
  Benefits Columns but was primarily made with Tables in mind!