@@ -907,7 +907,8 @@ enum ImGuiTabItemFlags_
     ImGuiTabItemFlags_SetSelected                   = 1 << 1,   // Trigger flag to programmatically make the tab selected when calling BeginTabItem()
     ImGuiTabItemFlags_NoCloseWithMiddleMouseButton  = 1 << 2,   // Disable behavior of closing tabs (that are submitted with p_open != NULL) with middle mouse button. You can still repro this behavior on user's side with if (IsItemHovered() && IsMouseClicked(2)) *p_open = false.
     ImGuiTabItemFlags_NoPushId                      = 1 << 3,   // Don't call PushID(tab->ID)/PopID() on BeginTabItem()/EndTabItem()
-    ImGuiTabItemFlags_Button                        = 1 << 4    // Turn tab item into a button. BeginTabItem() will return true only on frame it was clicked on
+    ImGuiTabItemFlags_Button                        = 1 << 4,   // Turn tab item into a button. BeginTabItem() will return true only on frame it was clicked on
+    ImGuiTabItemFlags_NoReorder                     = 1 << 5    // Prevent tab item from being reordered
 };
 
 // Flags for ImGui::IsWindowFocused()
